adjusted binary classification table

--- a/report_data_semantics/capitolo3.tex
+++ b/report_data_semantics/capitolo3.tex
@@ -22,8 +22,8 @@ It identifies records where the \texttt{numVotes} attribute is less than 100.
         \toprule
         \bf{Class} & \bf{Precision} & \bf{Recall} & \bf{F1-score} & \bf{Support} \\
         \midrule
-        \bf{0} & 0.78 & 0.66 & 0.72 & 1698 \\
-        \bf{1} & 0.86 & 0.91 & 0.88 & 3686 \\
+        \bf{Low engagement} & 0.86 & 0.91 & 0.88 & 3686 \\
+        \bf{High engagement} & 0.78 & 0.66 & 0.72 & 1698 \\
         \midrule
         \bf{Macro avg} & 0.82 & 0.79 & 0.80 & 5384 \\
         \bf{Weighted avg} & 0.83 & 0.83 & 0.83 & 5384 \\
