is_Adult merged with isAdult

--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -125,7 +125,8 @@ Because of redundancy and irrelevance, the following categorical variables were 
 \end{itemize}
 
 Additionally, the \texttt{isAdult} feature is highly correlated with the presence or absence of
-\textit{Adult} as a genre, so the two were merged with a logical OR operation.
+\textit{Adult} as a genre (16 records differ in the train set, 1 in the test set), so the two were merged
+with a logical OR operation.
 
 
 \subsection{Features transformations}
