--- a/code/notebook_bruno_report explorations.ipynb
+++ b/code/notebook_bruno_report explorations.ipynb
@@ -2,19 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "fa26e36b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from support.df_init import init\n",
     "\n",
-    "train = init()"
+    "train = init()\n",
+    "test = init('pp_test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
+   "id": "7678bde6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff_count = (train['isAdult'] != train['is_Adult']).sum()\n",
+    "percent_diff = 100 * diff_count / len(train)\n",
+    "percent_diff, diff_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fc0731b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 0)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff_count = (test['isAdult'] != test['is_Adult']).sum()\n",
+    "percent_diff = 100 * diff_count / len(test)\n",
+    "percent_diff, diff_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "86376a91",
    "metadata": {},
    "outputs": [
@@ -46,7 +93,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,11 +104,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "9ba3abd3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train['is_Adult'] = train['isAdult'] | train['is_Adult']\n",
+    "test['is_Adult'] = test['isAdult'] | test['is_Adult']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3ef84d42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(is_Adult\n",
+       " 0    15747\n",
+       " 1      425\n",
+       " Name: count, dtype: int64,\n",
+       " is_Adult\n",
+       " 0    5250\n",
+       " 1     134\n",
+       " Name: count, dtype: int64)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['is_Adult'].value_counts(), test['is_Adult'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "bc1a2669",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = train.drop(columns=['isAdult'])\n",
+    "test = test.drop(columns=['isAdult'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9015099c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train.to_csv('pp_train.csv', index=False)\n",
+    "# test.to_csv('pp_test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2e75ade7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = init('dm1_dataset_2425_imdb/train.csv')\n",
+    "test = init('dm1_dataset_2425_imdb/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fd45fc7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# One-hot encode the 'genres' column for both train and test DataFrames\n",
+    "train_genres = train['genres'].str.get_dummies(sep=',')\n",
+    "test_genres = test['genres'].str.get_dummies(sep=',')\n",
+    "\n",
+    "# Align columns to ensure both train and test have the same genre columns\n",
+    "train_genres, test_genres = train_genres.align(test_genres, join='outer', axis=1, fill_value=0)\n",
+    "\n",
+    "# Optionally, concatenate back to the original DataFrames\n",
+    "train = pd.concat([train, train_genres], axis=1)\n",
+    "test = pd.concat([test, test_genres], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3510bc55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['originalTitle', 'rating', 'startYear', 'endYear', 'runtimeMinutes',\n",
+       "       'awardWins', 'numVotes', 'worstRating', 'bestRating', 'totalImages',\n",
+       "       'totalVideos', 'totalCredits', 'criticReviewsTotal', 'titleType',\n",
+       "       'awardNominationsExcludeWins', 'canHaveEpisodes', 'isRatable',\n",
+       "       'isAdult', 'numRegions', 'userReviewsTotal', 'ratingCount',\n",
+       "       'countryOfOrigin', 'genres', 'Action', 'Adult', 'Adventure',\n",
+       "       'Animation', 'Biography', 'Comedy', 'Crime', 'Documentary', 'Drama',\n",
+       "       'Family', 'Fantasy', 'Film-Noir', 'Game-Show', 'History', 'Horror',\n",
+       "       'Music', 'Musical', 'Mystery', 'News', 'Reality-TV', 'Romance',\n",
+       "       'Sci-Fi', 'Short', 'Sport', 'Talk-Show', 'Thriller', 'War', 'Western',\n",
+       "       '\\N'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "687c9878",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.09737690950033473, 16)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff_count = (train['isAdult'] != train['Adult']).sum()\n",
+    "percent_diff = 100 * diff_count / len(train)\n",
+    "percent_diff, diff_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "27f8dd5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.018254837531945966, 1)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff_count = (test['isAdult'] != test['Adult']).sum()\n",
+    "percent_diff = 100 * diff_count / len(test)\n",
+    "percent_diff, diff_count"
+   ]
   }
  ],
  "metadata": {
